# semantic-tagging

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  selected_tags_small.csv
crates/api/: Cargo.toml
crates/api/src/: main.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: csv.rs  embedding.rs  lib.rs
src/: config.rs  embedding.rs  error.rs  llm.rs  main.rs
