[workspace]
resolver = "3"
members = ["crates/core", "crates/cli", "crates/api"]

[workspace.dependencies]
anyhow = "1.0.100"
axum = "0.8.6"
csv = "1.4.0"
dotenvy = "0.15.7"
futures = "0.3.31"
ollama-rs = "0.3.2"
qdrant-client = "1.15.0"
reqwest = "0.12.24"
serde = "1.0.228"
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
