[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
csv = { workspace = true }
dotenvy = { workspace = true }
futures = { workspace = true }
ollama-rs = { workspace = true }
qdrant-client = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
